@@ -1,3 +1,9 @@
+2013-01-28  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
+	* tests/test-amort.c (main): Fix compile warnings.
+	* tests/test-param.c (param_test): Likewise.
+	(main): Likewise.
+
 2013-01-24  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
 	* sysdeps/powerpc/dfpu/numdigits.h (numdigits): Define the decimal bias
